# materials

./: README.md
lectures/lec01_basics/: lec01.ipynb
lectures/lec02_basics/: io_example.py  lec02.ipynb  lec02_self.ipynb
lectures/lec03_classes/: lec03.ipynb  lec03_self.ipynb
lectures/lec04/: lec04.ipynb  lec04_self.ipynb
lectures/lec05_projects/: lec05.ipynb  lec05_self.md  mvp.md
lectures/lec05_projects/impl_n_tier/: config.py  main.py  tools.json
lectures/lec05_projects/impl_simple/: main.py  tools.json
lectures/lec06_intermediate/: lec06.ipynb  lec06_self.ipynb
lectures/lec07_fp_and_db/: data.db  data.json  db_runner.py  lec07.ipynb  lec07_self.ipynb  mini.db
lectures/lec07_fp_and_db/sql/: 01_create_tables.sql  (+7 more)
lectures/lec08_http/: lec08.ipynb  pyproject.toml
lectures/lec09_process/: lec09.ipynb  main.py  multi.py  pyproject.toml
lectures/lec10_async/: lec10.ipynb
lectures/lec11_rest/: lec11.ipynb  main.py  pyproject.toml
seminars/sem01_basics/: how_to_create_repo.md  sem01.ipynb  teminal+git basics.pptx
seminars/sem02_basics/: geo.json  mayco-distributors.csv  seminar-2-exceptions.ipynb
seminars/sem03_basics/: seminar03.ipynb
seminars/sem04_basics/: prog.py  seminar04.ipynb
seminars/sem05_architecture/: seminar05.ipynb
seminars/sem06_module/: seminar-6-packaging.ipynb
seminars/sem06_module/word_analyzer/: LICENSE  pyproject.toml  setup.py
seminars/sem06_module/word_analyzer/word_analyzer/: __init__.py  cli.py  worddata.py
seminars/sem07_db/: seminar-7.ipynb
seminars/sem08_mutliprocessing/: seminar-8-concurrency.ipynb
(+43 files in other folders)
